# RAG-conflict

./: .env  .gitignore  P2_DELIVERABLE.md  README.md  README_local.md  preprocess_data.py  smoke_test_bert_stance_module.py
P1/: CONTRACTS.md  DEMO_RUN_SUMMARY.md  README.md  pyproject.toml
P1/scripts/: analyze_fnc1_failures.py  bootstrap_significance.py  check_runtime.py  check_spacy_ner.py  compare_entity_backends.py  demo_cces_vs_baseline.py  eval_cces_averitec_transfer.py  eval_evidence_selection.py  eval_fnc1_blocking.py  eval_fnc1_nli.py  eval_fnc1_nli_advanced.py  eval_noisy_retrieval_stress.py  eval_p3_retrieval_hook.py  eval_ramdocs_stress.py  export_p2_contract_preview.py  export_p5_benchmark.py  inspect_averitec_claims.py  inspect_fnc1.py  inspect_structured_claims.py  prepare_fnc1.py  report_llm_runtime.py  report_test_coverage.py  run_p1_demo.py  run_structured_claim_demo.py  summarize_averitec_claims.py  summarize_structured_claims.py  sweep_noisy_retrieval_stress.py  tune_llm_claim_prompts.py  tune_ramdocs_blocking.py
P1/src/p1/: __init__.py  benchmark.py  blocking.py  claim_extraction.py  evidence_selection.py  handoff.py  llm_nli.py  nli.py  nli_ensemble.py  observability.py  pipeline.py  schemas.py  stats.py
P1/tests/: test_blocking_modes.py  test_blocking_query_threshold.py  test_data_adapters.py  test_evidence_selection.py  test_handoff_contract.py  test_llm_claim_cache.py  test_llm_nli.py  test_llm_response_parsing.py  test_nli_ensemble.py  test_nli_heuristic.py  test_observability.py  test_pipeline_batching.py  test_pipeline_integration.py  test_public_api.py  test_query_claim_extraction.py  test_ramdocs_answer_aware.py  test_retrieval_benchmark_contract.py  test_schemas_contract.py  test_stats.py  test_structured_claim_extraction.py  test_tail_case_regressions.py
P1/项目描述:分工/: P1_工程计划推进书_v2.docx  七人任务分配.docx
P3/: .gitignore  P3_FINAL_SUMMARY.md  P3_LOCAL_RETRIEVAL_SETUP.md  README.md  pyproject.toml
P3/config/: retrieval.yaml  retrieval_averitec_smoke.yaml  retrieval_bge_reranker.yaml  retrieval_no_rerank.yaml
P3/data/processed/: chunks.jsonl  (+1 more)
P3/scripts/: analyze_p1_fragmentation.py  analyze_p1_query_diagnostics.py  build_query_short_claim_report.py  check_retrieval_ready.py  eval_retrieval.py  export_p1_handoff.py  ingest_corpus.py  prepare_averitec_smoke.py  run_retrieval.py
P3/src/: __init__.py  config.py
P3/tests/: test_api_smoke.py  test_check_retrieval_ready.py  test_evidence_hygiene.py  test_handoff_adapter.py  test_query_short_claim_report.py  test_rerank_bge.py  test_retrieval_pipeline.py  test_splitter.py
P4/: README.md  p4ctl.py  pyproject.toml
P4/config/: api_config.yaml
P4/conflict_aware_rag_p4.egg-info/: PKG-INFO  SOURCES.txt
P4/data_backup/: bm25_corpus.json
P4/scripts/: build_wiki_bm25.py
P4/src/: dependencies.py  main.py
P4/tests/: p5_output_from_python.jsonl  queries.txt  queries_output_bm25.jsonl  queries_output_qdrant.jsonl  stop_test.ps1  test_api.py  test_p3.py  test_p5.json  test_p5_api.py  test_queries.py
P5/: README.md  pyproject.toml
P5/config/: baselines.example.yaml  benchmarks.example.yaml
P5/outputs/: baseline_eval.json  baseline_eval.md  baseline_eval.unmatched.json  preds_nli.jsonl  preds_reranker.jsonl  preds_vanilla.jsonl
P5/scripts/: evaluate_baselines.py  generate_preds_baselines.py  generate_preds_nli.py  make_annotation_template.py  normalize_benchmarks.py  run_p1_export_for_p5.py  setup_env_p123.ps1
P6/: README.md  pyproject.toml
P6/docs/: TECHNICAL_DESIGN.md
(+121 files in other folders)
